--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,8 +33,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}/app:${{ github.sha }}
-            ghcr.io/${{ github.repository }}/app:latest
+            ghcr.io/${{ github.repository }}/pyexec:${{ github.sha }}
+            ghcr.io/${{ github.repository }}/pyexec:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -45,7 +45,7 @@ jobs:
           file: ./Dockerfile.base
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}/base:${{ github.sha }}
-            ghcr.io/${{ github.repository }}/base:latest
+            ghcr.io/${{ github.repository }}/pyexec-base:${{ github.sha }}
+            ghcr.io/${{ github.repository }}/pyexec-base:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
